--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,66 @@
-/* Always set the map height explicitly to define the size of the div
-* element that contains the map. */
-#map {
-  height: 100%;
-}
-/* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+span {
+    margin-left: 10px;
+}
+#map {
+  height: 100%;
+}
+#floating-panel {
+     position: absolute;
+    bottom: 12px;
+    left: 75px;
+    z-index: 5;
+}
+#option-button {
+    position: absolute;
+    z-index: 99;
+    background-size: 32px 32px;
+    height: 32px;  
+    width: 32px;
+    cursor: pointer;
+
+    /* Float animation */
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    position: relative;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+#option-button:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, transparent 80%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, transparent 80%);
+    /* W3C */
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform, opacity;
+    transition-property: transform, opacity;
+}
+#option-button:hover, #option-button:focus, #option-button:active {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+    /* move the element up by 5px */
+}
+#option-button:hover:before, #option-button:focus:before, #option-button:active:before {
+      opacity: 1;
+  -webkit-transform: translateY(5px);
+  transform: translateY(5px);
+  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
 }
