--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,9 @@ span {
     left: 75px;
     z-index: 5;
 }
+#deselect {
+    
+}
 #option-button {
     position: absolute;
     z-index: 99;
@@ -59,8 +62,11 @@ span {
     /* move the element up by 5px */
 }
 #option-button:hover:before, #option-button:focus:before, #option-button:active:before {
-      opacity: 1;
-  -webkit-transform: translateY(5px);
-  transform: translateY(5px);
-  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+    opacity: 1;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+    /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+}
+#option-button img:hover > #deselect {
+    transition: background 0.5s;
 }
